--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,10 @@
 .bg-gray-900{
 background-color: #11182763;
 }
+
+#google_translate_element {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+  }
+  
