--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,14 @@
-#google_translate_element{
-    position: fixed;
-    top: 0;
-    right: 0;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.bg-gray-900{
+background-color: #11182763;
 }
+
+#google_translate_element {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+  }
+  
