--- a/src/index.css
+++ b/src/index.css
@@ -11,4 +11,9 @@ background-color: #11182763;
     top: 10px;
     right: 10px;
   }
+
+  /* .applications  .css-19bb58m:after {
+    border: 0px !important;
+
+  } */
   
