--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,11 @@
 background-color: #11182763;
 }
 
-#google_translate_element {
+/* #google_translate_element {
     position: absolute;
     top: 10px;
     right: 10px;
-  }
+  } */
 
   /* .applications  .css-19bb58m:after {
     border: 0px !important;
