--- a/src/assets/Styles/style.css
+++ b/src/assets/Styles/style.css
@@ -2802,6 +2802,14 @@ background: linear-gradient(90deg, rgba(129, 10, 23, 1) 0%, rgba(27, 2, 5, 1) 10
   right: 10%;
   background: linear-gradient(to right, #810A17, white);
 }
+.contact-form select{
+  width: 100%;
+  box-shadow: none;
+  border: 1px solid #dbdbdb;
+  padding: 15px;
+  border-radius: 10px;
+  margin-bottom: 25px;
+}
 .contact-form input{
   width: 100%;
   box-shadow: none;
